# usb-can

./: .gitignore  README.md
firmware/usb-can/: .mxproject  .project  CMakeLists.txt  CMakePresets.json  STM32G473XX_FLASH.ld  usb-can Debug.launch  usb-can.ioc
firmware/usb-can-old/: .cproject  .mxproject  usb-can.ioc
firmware/usb-can-old/App/Inc/: app.h
firmware/usb-can-old/App/Src/: app.c
firmware/usb-can-old/Core/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
firmware/usb-can-robstride/: .mxproject  CMakeLists.txt  stm32g473cbtx_flash.ld  usb-can-robstride.ioc
firmware/usb-can-robstride/App/Inc/: app.h
firmware/usb-can-robstride/App/Src/: app.c
firmware/usb-can-robstride/Core/Inc/: main.h  stm32g4xx_it.h
firmware/usb-can-robstride/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
firmware/usb-can-robstride/cmake/: gcc-arm-none-eabi.cmake
firmware/usb-can-robstride/cmake/stm32cubemx/: CMakeLists.txt
firmware/usb-can-tinymovr/: .cproject  .mxproject  .project  usb-can-tinymovr Debug.launch  usb-can-tinymovr.ioc
firmware/usb-can/cmake/: starm-clang.cmake
pcb/: usb-can.kicad_pcb  usb-can.kicad_prl  usb-can.kicad_pro  usb-can.kicad_sch
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
python/: can_manager.py  hertz.py  sensors.py  serial_manager.py
rust/plotter/src/: can.rs  old_main.rs  serial.rs
rust/usb-can/: Cargo.toml  memory.x
rust/usb-can/.cargo/: config.toml
rust/usb-can/src/: main.rs
software/: brush_can.py  can_manager.py  main.py  receive.py  robstride.py  serial_manager.py  transmit.py
(+16 files in other folders)
