[package]
name = "usb-can"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
stm32g4 = { version = "0.16.0", features = ["stm32g473"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

